snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/maven-metadata.xml.sha1
df5a8ab9e07c4e0c05f063070ee9cf15d30e3770